[gd_scene load_steps=9 format=3 uid="uid://dcgoeuu6a4qgp"]

[ext_resource type="Script" path="res://Object/Koopa/Koopa.gd" id="1_advnu"]
[ext_resource type="Texture2D" uid="uid://bxhwhwgjakjui" path="res://Asset/Object/enemies.png" id="2_rtis4"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_yr54o"]
size = Vector2(16, 24)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_5iejv"]
size = Vector2(20, 8)

[sub_resource type="Animation" id="Animation_s0abq"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:region_rect")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.001),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Rect2(210, -1, 16, 24), Rect2(210, -1, 16, 24)]
}

[sub_resource type="Animation" id="Animation_lg4yb"]
resource_name = "Walk"
length = 0.4
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:region_rect")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [Rect2(210, -1, 16, 24), Rect2(240, 0, 16, 24)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_6y0op"]
_data = {
"RESET": SubResource("Animation_s0abq"),
"Walk": SubResource("Animation_lg4yb")
}

[sub_resource type="RectangleShape2D" id="RectangleShape2D_j7r2h"]
size = Vector2(16, 13)

[node name="Koopa" type="CharacterBody2D"]
z_index = 5
collision_layer = 138
collision_mask = 144
script = ExtResource("1_advnu")
can_fall = true
object_type = 1

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("2_rtis4")
region_enabled = true
region_rect = Rect2(210, -1, 16, 24)

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_yr54o")

[node name="PackedArea2D" type="Area2D" parent="."]
collision_layer = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="PackedArea2D"]
position = Vector2(0, -9)
shape = SubResource("RectangleShape2D_5iejv")
debug_color = Color(0.72549, 0.466667, 0.286275, 0.419608)

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
root_node = NodePath("../Sprite2D")
libraries = {
"": SubResource("AnimationLibrary_6y0op")
}
autoplay = "Walk"

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D2" type="CollisionShape2D" parent="Area2D"]
position = Vector2(0, 1.5)
shape = SubResource("RectangleShape2D_j7r2h")

[connection signal="body_entered" from="PackedArea2D" to="." method="_on_packed_area_2d_body_entered"]
[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
